--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,6 +77,13 @@ body {
   font-size: 13px;
 }
 
+.person-about {
+  display: flex;
+  margin-left: 8px;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .chat .chat-header {
   padding: 15px 20px;
   border-bottom: 2px solid #f4f7f6;
@@ -115,11 +122,23 @@ body {
 
 .chat .chat-history .message-data {
   margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.chat .chat-history .message-data-right {
+  justify-content: flex-start;
+  flex-direction: row-reverse;
 }
 
 .chat .chat-history .message-data img {
   border-radius: 40px;
   width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+.chat .chat-history .message-data-right img {
+  padding-left: 6px;
 }
 
 .chat .chat-history .message-data-time {
