--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,6 +235,12 @@ body {
   height: 0;
 }
 
+.profile {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 @media only screen and (max-width: 767px) {
   .chat-app .people-list {
     height: 465px;
